cmake_minimum_required (VERSION 3.10)

    # C++version config
    set(CMAKE_CXX_STANDARD 17)
    set(CMAKE_CXX_STANDARD_REQUIRED True)

    project (1567-maximum-length-subarray-positive-product)


    add_executable(1567-maximum-length-subarray-positive-product.tsk 1567-maximum-length-subarray-positive-product.m.cpp)
