cmake_minimum_required (VERSION 3.10)

    # C++version config
    set(CMAKE_CXX_STANDARD 17)
    set(CMAKE_CXX_STANDARD_REQUIRED True)

    project (426-convert-to-sorted-doubly-linkedlist)


    add_executable(426-convert-to-sorted-doubly-linkedlist.tsk 426-convert-to-sorted-doubly-linkedlist.m.cpp)
